Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1706

[C++] Wrong dictionary_page_offset when writing only data pages via BufferedPageWriter

    XMLWordPrintableJSON

Details

    Description

      The dictionary_page_offset should be set to 0 to indicate that a column chunk has no dictionary pages.
      This is indeed the case when using SerializedPageWriter.
      However, when using BufferedPageWriter, the dictionary_page_offset is wrongfully set to the offset of the first data page.

      Attachments

        Issue Links

          Activity

            People

              oro Or Ozeri
              oro Or Ozeri
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m