PARQUET-1706: [C++] Wrong dictionary_page_offset when writing only data pages via BufferedPageWriter

See: https://issues.apache.org/jira/browse/PARQUET-1706

Closes #5922 from orozery/dictionary_page_offset_on_buffered_page_writer and squashes the following commits:

91e484ca0 <Or Ozeri> post-review
db5dbdd90 <Or Ozeri> fix dictionary page offset on BufferedPageWriter

Authored-by: Or Ozeri <oro@il.ibm.com>
Signed-off-by: Wes McKinney <wesm+git@apache.org>